# MediaInfo

./: AUTHORS  Makefile  Makefile.am  README.md  autogen.sh  config.h.in  configure.ac  mediainfo.c  mediainfo.h  printinfo.c  printinfo.h  testmediainfo.c
lib/: Makefile.am  mediainfo.c  mediainfo.h  printinfo.c  printinfo.h
test/: Makefile.am  testmediainfo.c
